--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,10 +14,10 @@
    <string>Dodge Timer</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="TButton1">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>40</x>
       <y>60</y>
       <width>75</width>
       <height>24</height>
@@ -25,6 +25,19 @@
     </property>
     <property name="text">
      <string>Click</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="TLabel1">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>90</y>
+      <width>121</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
