--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -40,6 +40,19 @@
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="DLabel1">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>120</y>
+      <width>16</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>0</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
