--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -53,6 +53,19 @@
      <string>0</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="Button_Reset">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>60</y>
+      <width>75</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Reset</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
